SafeVault,v 1.1.0，自动填充实现